# flex-ai-gateway

./: .dockerignore  .env.example  .gitignore  AVOIDANCE_TABLE.md  Dockerfile  Jenkinsfile  README.md  pyproject.toml  requirements.txt
app/: config.py  database.py  main.py
app/bootstrap/: factory.py  middleware.py  routes.py
app/bootstraps/: app.py
app/core/: config.py  exceptions.py
app/db/: session.py
app/models/: __init__.py  database.py  schemas.py  securities_info.py
app/repositories/: securities_repository.py
app/routers/: api.py  health.py  llm.py  rag.py  securities.py
app/schemas/: __init__.py  health_schema.py  llm_schema.py  rag_schema.py  securities_schema.py
app/services/: core.py  health_service.py  llm_service.py  rag_service.py  securities_service.py
docker/: Dockerfile  docker-compose.yml
docs/: rag-current-flow.md
docs/knowledge-base/: owner-profile.md  qdrant-ollama.md
tests/: test_rag_router.py  test_rag_service.py
