[project]
name = "ai-gateway"
version = "0.1.0"
description = "AI Gateway MLOps Inference Server"
readme = "README.md"
requires-python = ">=3.11"

authors = [
  {name = "Luyện Hải Đăng", email = "luyenhaidangit@gmail.com"}
]

dependencies = [
    # Framework
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29,<1.0",

    # database
    "sqlalchemy>=2.0,<3.0",
    "oracledb>=2.0,<3.0",
    "alembic>=1.13,<2.0",

    # validation & config
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.2,<3.0",

    # http client
    "httpx>=0.27,<1.0",

    # vector store
    "qdrant-client>=1.10,<2.0",

    # serialization
    "orjson>=3.9,<4.0",

    # logging
    "structlog>=24.1,<25.0"
]

[project.optional-dependencies]

dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]
skip-string-normalization = true

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["docker*", "secrets*"]
